Added viewport to html and made a few text edits.

--- a/TreeTracker/Resources/Terms.html
+++ b/TreeTracker/Resources/Terms.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1" />
 <style>
 h1 {text-align: center;}
 </style>
@@ -65,10 +66,10 @@ Personal Information: On our tree tracker app we require a name, and email, and 
 Mobile App users: Our mobile apps collect the following personal information: User entered information: name, email address, organization name, phone number.
 </p>
 <p>
-Donor information: When you make a donation we collect information that is used solely for accounting, tax reporting and donation processing purposes. This information is guarded with utmost care and will not be sold, shared or traded with any other entity. We do abide by IRS requirement to disclose limited information that is mandated to be available on public taxes records. Donor information may also be disclosed at the donor\'s request. We collect the following donor information: name, address, amount of donation, any other personal information given to us.
+Donor information: When you make a donation we collect information that is used solely for accounting, tax reporting and donation processing purposes. This information is guarded with utmost care and will not be sold, shared or traded with any other entity. We do abide by IRS requirement to disclose limited information that is mandated to be available on public taxes records. Donor information may also be disclosed at the donor's request. We collect the following donor information: name, address, amount of donation, any other personal information given to us.
 </p>
 <p>
-User Photos:: GreenStand’s tree tracking program runs on the collection of time-stamped, geotagged photos. This information is stored in a secure database from which it is displayed in the form of a tree map. We also use this information to generate statistics related to tree planting. We are only interested in tree-related photos, please don’t send us anything else. With the proper use of this system, all photo taken will relate to environmental data and GreenStand does not consider or treat uploaded photos as “user data.” By using our mobile application you are agreeing to allow us to use your photos.
+User Photos: GreenStand’s tree tracking program runs on the collection of time-stamped, geotagged photos. This information is stored in a secure database from which it is displayed in the form of a tree map. We also use this information to generate statistics related to tree planting. We are only interested in tree-related photos, please don’t send us anything else. With the proper use of this system, all photo taken will relate to environmental data and GreenStand does not consider or treat uploaded photos as “user data.” By using our mobile application you are agreeing to allow us to use your photos.
 </p>
 
 <h2>Changes to the Policy:</h2>
